Add CSS effect to button clicks

--- a/styles.css
+++ b/styles.css
@@ -82,6 +82,10 @@ button:hover {
 
 }
 
+button:active {
+    -webkit-filter: brightness(60%);
+}
+
 #numbers {
     display: flex;
     flex-wrap: wrap;
